# crow

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-28-crow-network-monitor-design.md
src/: firewall.rs  main.rs
src/aggregate/: counter.rs  dns.rs  mod.rs  proxy.rs  state.rs
src/capture/: mod.rs  packet.rs  pktap.rs
src/process/: macos.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/views/: connection.rs  detail.rs  domain.rs  mod.rs  process.rs
