[package]
name = "crow"
version = "0.1.0"
edition = "2021"
description = "Real-time TUI network monitor for macOS with per-process attribution"

[dependencies]
pcap = "2"
pnet_packet = "0.35"
libproc = "0.14"
ratatui = "0.29"
crossterm = "0.28"
dns-parser = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
